--- a/src/vsarVSTS-Roll-up-board/static/index.html
+++ b/src/vsarVSTS-Roll-up-board/static/index.html
@@ -13,13 +13,14 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Roll-Up of the Board</title>
     <link rel="stylesheet" href="css/app.css" type="text/css" />
     <style>
         .bgImage {
-            background-image: url('img/unconfigured-small.png');
+            background-image: url('images/unconfigured-small.png');
             height: 40px;
             background-position: center;
             background-repeat: no-repeat;
@@ -27,15 +28,16 @@
         }
     </style>
 </head>
+
 <body>
 
     <div class="widget" style="cursor:pointer">
-       
-            <div class="title-header" style="font-size:13px"></div>
-            <div id="content">
-                <table id="tableboard"></table>
-            </div>
-        
+
+        <div class="title-header" style="font-size:13px"></div>
+        <div id="content">
+            <table id="tableboard"></table>
+        </div>
+
         <div class="defaultcontent" style="display: block;" id="configwidget">
             <div class="widget-message-text">Configure widget</div>
             <div class="bgImage"></div>
@@ -47,29 +49,25 @@
     </div>
 
 
-    <script src="scripts/VSS.SDK.min.js"></script>
-    <script src="scripts/ai.1.0.4-build00190.min.js"></script>
-    <script src="scripts/TelemetryClient.js"></script>
+    <script src="../lib/VSS.SDK.min.js"></script>
+    <script src="../lib/ai.0.js"></script>
     <script type="text/javascript">
         // Initialize the VSS sdk
         VSS.init({
             explicitNotifyLoaded: true,
             setupModuleLoader: true,
             usePlatformScripts: true,
-            usePlatformStyles: true,
-            moduleLoaderConfig: {
-                paths: {
-                    "Scripts": "scripts"
-                }
-            }
+            usePlatformStyles: true
+
         });
 
         // Wait for the SDK to be initialized
         VSS.ready(function () {
-            require(["Scripts/appWidget"], function (app) { });
+            VSS.require(["../dist/WidgetRollUpBoard"], function (app) { });
         });
     </script>
 
 
 </body>
+
 </html>
