Add feature flags LD services

--- a/src/vsarVSTS-Roll-up-board/static/configuration.html
+++ b/src/vsarVSTS-Roll-up-board/static/configuration.html
@@ -30,6 +30,7 @@
     </div>
     <script src="../lib/VSS.SDK.min.js"></script>
     <script src="../lib/ai.0.js"></script>
+    <script src="../lib/ldclient.min.js"></script>
     <script type="text/javascript">
         VSS.init({
             explicitNotifyLoaded: true,
