--- a/src/vsarVSTS-Roll-up-board/static/configuration.html
+++ b/src/vsarVSTS-Roll-up-board/static/configuration.html
@@ -26,6 +26,10 @@
                     <select id="board-dropdown"></select>
                 </div>
             </div>
+            <div id="switch-displaylog" style="margin-top:15px;background-color:#eff6fc;display:block">
+                <legend>Display logs*</legend>
+                <label class="switch"><input type="checkbox" id="display-logs"><div class="slider round"></div></label>
+            </div>
         </div>
     </div>
     <script src="../lib/VSS.SDK.min.js"></script>
