remove email and add try catch

--- a/src/vsarVSTS-Roll-up-board/static/index.html
+++ b/src/vsarVSTS-Roll-up-board/static/index.html
@@ -73,6 +73,7 @@
     <script src="../lib/VSS.SDK.min.js"></script>
     <script src="../lib/ai.0.js"></script>
     <script src="../lib/ldclient.min.js"></script>
+    <script  src="../lib/eventsource.min.js"></script>
     <script type="text/javascript">
         // Initialize the VSS sdk
         VSS.init({
