update style and typo

--- a/src/vsarVSTS-Roll-up-board/static/configuration.html
+++ b/src/vsarVSTS-Roll-up-board/static/configuration.html
@@ -37,7 +37,7 @@
                     </label>
                      
                 </div>
-                <div style="clear:left;font-size:13px;padding-top:5px">Activate logs display in browser console developpeur tools</div>
+                <div style="clear:left;font-size:13px;padding-top:5px">Activate logs display in browser console developer tools</div>
             </div>
         </div>
     </div>
