--- a/src/vsarVSTS-Roll-up-board/static/configuration.html
+++ b/src/vsarVSTS-Roll-up-board/static/configuration.html
@@ -30,7 +30,7 @@
             <div id="switch-displaylog" style="margin-top:15px;display:line">
                 <div>
                     <div style="font-size:14px;float:left;color:#767676">Display logs*</div>
-                    <div style="float:right;margin-left:10px" id="displaylogs-status">On</div>
+                    <div style="float:right;margin-left:10px" id="displaylogs-status"></div>
                     <label class="switch" style="float:right">
                         <input type="checkbox" id="display-logs">
                         <div class="slider round"></div>
