Add FF display logs in configuration panel (#29)
* add folder and file in gitignore

* ReEnabled the AI telemetry for TFS OnPrem And add links github on manifest json file

* Clen scripts folder by deleting telemetryclient.js

* rename postbuild to post-build

* update gitignore

* update logoi size to 128 * 128

* update logo size with png background

* - add telemetryclient-team-services-extension into dependencies and scripts into package.json
- clean vss-extension.json

* delete token and publish

* update gitignore

* delete personnal info

* Add feature flags LD services

* tokens

* add console log

* disable FF on TFS onpremise

* add semicolon

* add log

* FF display logs

* clean

* default val for on premise

* update var

* clean personnals informations

* start v2

* add logs switch

* update style and typo

* add FF display logs

* remove  personnal info

--- a/src/vsarVSTS-Roll-up-board/static/configuration.html
+++ b/src/vsarVSTS-Roll-up-board/static/configuration.html
@@ -13,6 +13,7 @@
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <link href="css/app.css" rel="stylesheet" />
 </head>
@@ -25,6 +26,18 @@
                 <div class="wrapper">
                     <select id="board-dropdown"></select>
                 </div>
+            </div>
+            <div id="switch-displaylog" style="margin-top:15px;display:line">
+                <div>
+                    <div style="font-size:14px;float:left;color:#767676">Display logs*</div>
+                    <div style="float:right;margin-left:10px" id="displaylogs-status"></div>
+                    <label class="switch" style="float:right">
+                        <input type="checkbox" id="display-logs">
+                        <div class="slider round"></div>
+                    </label>
+                     
+                </div>
+                <div style="clear:left;font-size:13px;padding-top:5px">Activate logs display in browser console developer tools</div>
             </div>
         </div>
     </div>
@@ -44,4 +57,5 @@
         });
     </script>
 </body>
+
 </html>
