--- a/src/vsarVSTS-Roll-up-board/static/configuration.html
+++ b/src/vsarVSTS-Roll-up-board/static/configuration.html
@@ -53,7 +53,7 @@
         });
 
         VSS.ready(function () {
-            VSS.require(["../dist/configuration"], function (configuration) { });
+            require(["dist/configuration"], function (configuration) { });
         });
     </script>
 </body>
